welcome.lessons.welcome.bat.bool1.HasTeen.scala.error
hasTeen:2: error: ':' expected but ')' found.
  def int1319(a)={
               ^hasTeen:14: error: identifier expected but '}' found.
} 
^